CoCのタイトル修正

--- a/app/elements/component/nf-site-header/nf-site-header.html
+++ b/app/elements/component/nf-site-header/nf-site-header.html
@@ -72,7 +72,7 @@
             <a href="#!/venue" class="horizontal center-center layout" title="アクセス">Venue</a>
           </paper-tab>
           <paper-tab link hidden>
-            <a href="#!/coc" class="horizontal center-center layout">CoC</a>
+            <a href="#!/coc" class="horizontal center-center layout">Code of Conduct</a>
           </paper-tab>
         </paper-tabs>
       </div>
