トップページへのリンクパスの最後に/追加

--- a/app/elements/component/nf-app-logo/nf-app-logo.html
+++ b/app/elements/component/nf-app-logo/nf-app-logo.html
@@ -25,7 +25,7 @@
     }
   </style>
   <template>
-    <a class="nf-app-logo__link" href="/2015">
+    <a class="nf-app-logo__link" href="/2015/">
       <div class="nf-app-logo__icon">
         <img src$="{{_createSrcPath()}}" height="36" alt="">
       </div>
