--- a/2015/elements/component/nf-speaker-list/nf-speaker-list.html
+++ b/2015/elements/component/nf-speaker-list/nf-speaker-list.html
@@ -33,6 +33,9 @@
       border: 4px solid #009688;
       border-radius: 135px;
     }
+    .nf-speaker__thumb:visited {
+      border-color: #B2DFDB;
+    }
     .nf-speaker__thumb:hover {
       border-color: #00796B;
     }
