--- a/app/elements/component/nf-sp-speakers/nf-sp-speakers.html
+++ b/app/elements/component/nf-sp-speakers/nf-sp-speakers.html
@@ -11,7 +11,7 @@
     }
 
     .nf-special-speaker__info {
-      padding: 7px 7px 10px;
+      padding: 7px 10px;
     }
     .nf-special-speaker__name {
       font-size: 16px;
@@ -21,10 +21,6 @@
       margin-bottom: 7px;
       font-size: 16px;
       font-weight: bold;
-    }
-    .nf-special-speaker__job {
-      font-size: 14px;
-      color: rgba(0, 0, 0, 0.54);
     }
   </style>
 <template>
@@ -46,7 +42,6 @@
                 <div class="nf-special-speaker__info">
                   <p class="nf-special-speaker__name"><span>{{item.name}}</span></p>
                   <p class="nf-special-speaker__id"><a href$="{{_twitterUrl(item.twitter)}}">@<span>{{item.twitter}}</span></a></p>
-                  <p class="nf-special-speaker__job">{{item.job}}</p>
                 </div>
               </div>
             </paper-material>
