--- a/app/elements/component/nf-speaker-list/nf-speaker-list.html
+++ b/app/elements/component/nf-speaker-list/nf-speaker-list.html
@@ -34,7 +34,7 @@
       border-radius: 135px;
     }
     .nf-speaker__thumb:visited {
-      border-color: #B2DFDB;
+      border-color: #4DB6AC;
     }
     .nf-speaker__thumb:hover {
       border-color: #00796B;
