登壇者募集を追加

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -165,6 +165,9 @@ a:focus {
   color: #FFFFFF;
   text-transform: none !important;
 }
+.nf-button a {
+  color: #FFFFFF;
+}
 .nf-button--register {
   width: 300px;
 }
