--- a/app/elements/component/nf-news/nf-news.html
+++ b/app/elements/component/nf-news/nf-news.html
@@ -41,7 +41,7 @@
         <template is="dom-repeat" items="{{news}}">
         <li class="nf-news-list__item">
           <time class="nf-news-list__time" datetime$="{{item.date}}">{{item.date}}</time>
-          <span class="nf-news-list__text">{{item.text}}</span>
+          <span class="nf-news-list__text" inner-h-t-m-l="{{item.text}}"></span>
         </li>
         </template>
       </ol>
