IEでpicturefillが動いてなかったのでreadyで実行するように修正

--- a/app/elements/component/nf-page-header/nf-page-header.html
+++ b/app/elements/component/nf-page-header/nf-page-header.html
@@ -53,6 +53,9 @@
           value: ''
         }
       },
+      ready: function () {
+        picturefill();
+      },
       _createSrcPath: function(src, ext) { return location.pathname + 'images/page-header/' + src + ext; }
     });
   })();
