--- a/2015/elements/component/nf-app-logo/nf-app-logo.html
+++ b/2015/elements/component/nf-app-logo/nf-app-logo.html
@@ -27,7 +27,7 @@
   <template>
     <a class="nf-app-logo__link" href="/2015/">
       <div class="nf-app-logo__icon">
-        <img src$="{{_createSrcPath()}}" height="36" alt="">
+        <img src$="{{_createSrcPath()}}" width="36" height="36" alt="">
       </div>
       <div class="nf-app-logo__text">
         <h1 class="nf-app-logo__name">東京Node学園祭2015</h1>
