--- a/2015/elements/component/nf-top-gimmick/nf-top-gimmick.html
+++ b/2015/elements/component/nf-top-gimmick/nf-top-gimmick.html
@@ -23,7 +23,7 @@
     }
     .nf-top-gimmick__game-bar {
       position: relative;
-      width: 140px;
+      width: 150px;
       height: 20px;
       margin-bottom: 5px;
       background: rgba(0,0,0,0.87);
@@ -71,18 +71,20 @@
     .nf-top-gimmick__game-people-label {
       display: table-cell;
       width: 45%;
-      padding: 0 10px;
       font-family: Roboto;
       font-size: 10px;
       font-weight: bold;
+      white-space: nowrap;
     }
     .nf-top-gimmick__game-people-label--1 {
       color: #0091EA;
       text-align: left;
+      padding: 0 0 0 10px;
     }
     .nf-top-gimmick__game-people-label--2 {
       color: #FFAB00;
       text-align: right;
+      padding: 0 10px 0 0;
     }
     .nf-top-gimmick__game-people-label-num {
       font-size: 12px;
@@ -288,7 +290,7 @@
       </div>
       <div class="nf-top-gimmick__info-en">
         <div class="nf-top-gimmick__info-en-inner">
-          <p class="nf-top-gimmick__info-en-time"><time datetime="2015-11-07">Novemver 7, 2015</time></p>
+          <p class="nf-top-gimmick__info-en-time"><time datetime="2015-11-07">November 7, 2015</time></p>
           <p class="nf-top-gimmick__info-en-place">Shibuya Markcity 13F<br>Tokyo, Japan</p>
         </div>
       </div>
