--- a/app/elements/component/nf-schedule-table/nf-schedule-table.html
+++ b/app/elements/component/nf-schedule-table/nf-schedule-table.html
@@ -10,6 +10,7 @@
       box-sizing: border-box;
       padding: 15px 20px;
       border: 1px solid rgba(0, 0, 0, 0.12);
+      border-width: 0 1px 1px 0;
       font-size: 18px;
       line-height: 1.5;
     }
