--- a/app/elements/component/nf-news/nf-news.html
+++ b/app/elements/component/nf-news/nf-news.html
@@ -30,6 +30,11 @@
       display: block;
       font-size: 16px;
     }
+    @media ( max-width: 480px ) {
+      .nf-news-list__text {
+        font-size: 14px;
+      }
+    }
   </style>
 <template>
   <section class="nf-section">
