--- a/app/elements/component/nf-nodejs-logo/nf-nodejs-logo.html
+++ b/app/elements/component/nf-nodejs-logo/nf-nodejs-logo.html
@@ -3,6 +3,11 @@
     :host {
       display: block;
     }
+    @media ( max-width: 800px ) {
+      :host {
+        margin-bottom: 30px;
+      }
+    }
   </style>
   <template>
     <a href="https://nodejs.org/">
