--- a/2015/elements/component/nf-app-logo/nf-app-logo.html
+++ b/2015/elements/component/nf-app-logo/nf-app-logo.html
@@ -23,6 +23,11 @@
       font-size: 16px;
       font-weight: bold;
     }
+    @media ( max-width: 600px ) {
+      .nf-app-logo__name {
+        display: none;
+      }
+    }
   </style>
   <template>
     <a class="nf-app-logo__link" href="/2015/">
