--- a/2015/elements/component/nf-link-list/nf-link-list.html
+++ b/2015/elements/component/nf-link-list/nf-link-list.html
@@ -6,10 +6,13 @@
     }
     .nf-link-list__item {
       display: inline-block;
-      margin-left: 1em;
-      font-family: Roboto;
+      margin-right: 1em;
+      font-family: Roboto, 'Helvetica Neue', Helvetica, Arial, sans-serif;
       font-size: 14px;
       font-weight: bold;
+    }
+    .nf-link-list__item:last-child {
+      margin-right: 0;
     }
   </style>
   <template>
