--- a/2015/elements/component/nf-site-header/nf-site-header.html
+++ b/2015/elements/component/nf-site-header/nf-site-header.html
@@ -1,13 +1,31 @@
 <dom-module id="nf-site-header">
   <style is="custom-style">
     :host {
+      width: 100%;
+    }
+    .nf-site-header__cols {
+      display: -ms-flexbox;
+      display: -webkit-flex;
+      display: flex;
+      -ms-flex-pack: space-between;
+      -webkit-justify-content: space-between;
+      justify-content: space-between;
+      -ms-flex-align: center;
+      -webkit-align-items: center;
+      align-items: center;
     }
     .nf-site-header__col--1 {
-      margin-right: 30px;
+      margin: 0 20px 0 10px;
+    }
+    .nf-site-header__col--2 {
+      -ms-flex: 1 1 0.000000001px;
+      -webkit-flex: 1;
+      flex: 1;
     }
     .nf-site-header__col--3 {
-      margin-left: 30px;
+      margin: 0 10px 0 20px;
     }
+
     .nf-ticket-link {
       position: relative;
       display: block;
@@ -28,9 +46,7 @@
       position: absolute;
       display: inline-block;
       top: 30px;
-      left: 50%;
-      width: 8em;
-      margin-left: -4em;
+      right: 0;
       z-index: 1;
       opacity: 0;
       padding: 5px 0;
@@ -44,20 +60,39 @@
     paper-tab {
       text-decoration: none;
       font-size: 16px;
-      font-family: Roboto;
+      font-family: Roboto, 'Helvetica Neue', Helvetica, Arial, sans-serif;
       font-weight: bold;
     }
     paper-tab a {
       color: #FFFFFF;
       opacity: 30;
     }
+    @media (min-width: 481px) and (max-width: 600px) {
+      .nf-site-header__col--1 {
+        margin: 0 0 0 10px !important;
+      }
+      .nf-site-header__col--3 {
+        margin: 0 10px !important;
+      }
+    }
+    @media (max-width: 480px) {
+      .nf-site-header__col--1 {
+        margin: 0 -10px 0 5px !important;
+      }
+      .nf-site-header__col--3 {
+        margin: 0 5px !important;
+      }
+      paper-tab {
+        font-size: 14px !important;
+      }
+    }
   </style>
   <template>
-    <div class="center horizontal layout">
+    <div class="nf-site-header__cols">
       <div class="nf-site-header__col nf-site-header__col--1">
         <nf-app-logo></nf-app-logo>
       </div>
-      <div class="nf-site-header__col nf-site-header__col--2 flex">
+      <div class="nf-site-header__col nf-site-header__col--2">
         <paper-tabs id="js-nf-tabs" selected="0">
           <paper-tab link>
             <a href="#!/about" class="horizontal center-center layout" title="概要">About</a>
