--- a/2015/elements/component/nf-speaker-list/nf-speaker-list.html
+++ b/2015/elements/component/nf-speaker-list/nf-speaker-list.html
@@ -9,6 +9,17 @@
     .nf-speaker-list__item:first-child {
       border-top: 0;
     }
+    @media ( min-width: 601px ) and ( max-width: 840px ) {
+      .nf-speaker-list__item {
+        padding: 20px 70px;
+      }
+    }
+    @media ( max-width: 600px ) {
+      .nf-speaker-list__item {
+        padding: 20px 40px;
+      }
+    }
+
     .nf-speaker {
       display: table;
       width: 100%;
@@ -25,11 +36,11 @@
       vertical-align: top;
     }
     .nf-speaker__thumb {
-      display: block;
+      display: inline-block;
       overflow: hidden;
       width: 135px;
       height: 135px;
-      margin-bottom: 10px;
+      margin-bottom: 5px;
       border: 4px solid #009688;
       border-radius: 135px;
     }
@@ -40,6 +51,7 @@
       border-color: #00796B;
     }
     .nf-speaker__id {
+      display: block;
       font-size: 18px;
       font-weight: bold;
     }
@@ -50,6 +62,48 @@
     }
     .nf-speaker__description {
       line-height: 2;
+    }
+    @media ( min-width: 601px ) and ( max-width: 840px ) {
+      .nf-speaker__name {
+        font-size: 30px;
+      }
+    }
+    @media ( min-width: 481px ) and ( max-width: 600px ) {
+      .nf-speaker {
+        display: block;
+      }
+      .nf-speaker__link {
+        display: block;
+        width: auto;
+        margin-bottom: 20px;
+      }
+      .nf-speaker__info {
+        display: block;
+        padding-left: 0;
+      }
+      .nf-speaker__name {
+        font-size: 30px;
+      }
+    }
+    @media ( max-width: 480px ) {
+      .nf-speaker {
+        display: block;
+      }
+      .nf-speaker__link {
+        display: block;
+        width: auto;
+        margin-bottom: 20px;
+      }
+      .nf-speaker__info {
+        display: block;
+        padding-left: 0;
+      }
+      .nf-speaker__name {
+        font-size: 24px;
+      }
+      .nf-speaker__description {
+        font-size: 14px;
+      }
     }
   </style>
   <template>
