--- a/app/elements/component/nf-sponsors/nf-sponsors.html
+++ b/app/elements/component/nf-sponsors/nf-sponsors.html
@@ -39,6 +39,9 @@
     .nf-sponsors__link {
       display: block;
       text-decoration: none;
+      background-color: #fff;
+      padding-left: 5px;
+      padding-right: 5px;
     }
 
     .nf-sponsor-description {
