当たり判定が雑だった

--- a/app/elements/component/nf-sponsors/nf-sponsors.html
+++ b/app/elements/component/nf-sponsors/nf-sponsors.html
@@ -56,6 +56,7 @@
       background: rgba(97, 97, 97, 0.9);
       color: #FFFFFF;
       transition: all 0.5s;
+      pointer-events: none;
     }
     .nf-sponsor-description__heading {
       padding: 15px 0 10px;
