--- a/2015/elements/component/nf-sponsors/nf-sponsors.html
+++ b/2015/elements/component/nf-sponsors/nf-sponsors.html
@@ -39,6 +39,9 @@
     .nf-sponsors__link {
       display: block;
       text-decoration: none;
+      background-color: #fff;
+      padding-left: 5px;
+      padding-right: 5px;
     }
 
     .nf-sponsor-description {
@@ -53,6 +56,7 @@
       background: rgba(97, 97, 97, 0.9);
       color: #FFFFFF;
       transition: all 0.5s;
+      pointer-events: none;
     }
     .nf-sponsor-description__heading {
       padding: 15px 0 10px;
