スポンサー追加

--- a/app/elements/component/nf-sponsors/nf-sponsors.html
+++ b/app/elements/component/nf-sponsors/nf-sponsors.html
@@ -40,8 +40,7 @@
       display: block;
       text-decoration: none;
       background-color: #fff;
-      padding-left: 5px;
-      padding-right: 5px;
+      padding: 25px;
     }
 
     .nf-sponsor-description {
